update resume images and update contact phone number in footer

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-XKDNDNR31F');
-</script>
+    gtag('config', 'G-XKDNDNR31F');
+  </script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -44,7 +44,7 @@
 <body ontouchstart="">
 
   <!-- Nav bar ------------------------------------------------------------>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-blackp animate__animated animate__fadeInDown" >
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blackp animate__animated animate__fadeInDown">
     <a class="navbar-brand" href="index.html"><img class="logo" src="imgs/logo_white_dot.png" alt="robert logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,7 +100,8 @@
           out
           some of my work in my <a href="portfolio.html">portfolio</a>, add me on <a
             href="https://www.linkedin.com/in/robert-greenawalt-43457a14a/" target="_blank">LinkedIn</a>, or send me an
-          <a href="contact.html">email</a>.</p>
+          <a href="contact.html">email</a>.
+        </p>
       </div>
     </div>
 
@@ -146,7 +147,7 @@
             <div class="image__overlay">
               <div class="image__title">Restaurant Finder</div>
               <p class="image__description introlight">
-                MySQL, Express, Node, Passport, Javascript, <br/> Google Maps API
+                MySQL, Express, Node, Passport, Javascript, <br /> Google Maps API
               </p>
               <span>
                 <a class="btn btn-light" target="_blank" href="https://findtherestaurant500.herokuapp.com/">View
@@ -304,6 +305,7 @@
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
+        <p><a href="tel:215.913.7231">(215)-913-7231</a></p>
       </div>
     </div>
   </div>
@@ -332,10 +334,10 @@
   <script type="text/javascript">
 
 
-      $("#introHello").on("click", function(){
-        $("#introHello").addClass("animate__animated animate_pulse")
+    $("#introHello").on("click", function () {
+      $("#introHello").addClass("animate__animated animate_pulse")
 
-      })
+    })
   </script>
 
 </body>
