--- a/portfolio.html
+++ b/portfolio.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-XKDNDNR31F');
-</script>
+    gtag('config', 'G-XKDNDNR31F');
+  </script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -97,7 +97,7 @@
           <div class="image__overlay">
             <div class="image__title">Restaurant Finder</div>
             <p class="image__description introlight">
-              MySQL, Express, Node, Passport, Javascript, <br/> Google Maps API
+              MySQL, Express, Node, Passport, Javascript, <br /> Google Maps API
             </p>
             <span>
               <a class="btn btn-light" target="_blank" href="https://findtherestaurant500.herokuapp.com/">View
@@ -250,6 +250,7 @@
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
+        <p><a href="tel:215.913.7231">(215)-913-7231</a></p>
       </div>
     </div>
   </div>
