--- a/resume.html
+++ b/resume.html
@@ -117,6 +117,7 @@
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
+        <p><a href="tel:215.913.7231">(215)-913-7231</a></p>
       </div>
     </div>
   </div>
