--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKDNDNR31F"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-XKDNDNR31F');
-</script>
+    gtag('config', 'G-XKDNDNR31F');
+  </script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -89,12 +89,12 @@
 
     <div class="row">
       <div class="col-md">
-        <h1><i class="far fa-envelope"></i>  Email:</h1>
+        <h1><i class="far fa-envelope"></i> Email:</h1>
         <a href="mailto:robert.greenawalt29@gmail.com">robert.greenawalt29@gmail.com</a>
       </div>
       <div class="col-md">
         <h1><i class="fas fa-phone-alt"></i> Phone: </h1>
-        <a href="tel:2159137231"> 215 . 913 . 7231</a>
+        <a href="tel:2159137231"> (215) - 913 - 7231</a>
       </div>
     </div>
     <br />
@@ -131,6 +131,7 @@
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
+        <p><a href="tel:215.913.7231">(215)-913-7231</a></p>
       </div>
     </div>
   </div>
@@ -153,7 +154,7 @@
 
   <script type="text/javascript">
   </script>
-  
+
 </body>
 
 </html>
