update styles with larger eye catching header (Bungee Shade) and re-implement contact form; also increse font size in footer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- google fonts recursive font -->
+ 
+
+
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+
+
   <!-- animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
@@ -94,7 +103,7 @@
     <br>
     <div class="row animate__animated animate__fadeIn">
       <div class="col-sm-12">
-        <h2> I'm Robert, a <em class="recursiveFont">full-stack developer</em> and lifelong learner.</h2>
+        <h2 class="recursiveFont"> I'm Robert, a <em class="recursiveFont">full-stack developer</em> and lifelong learner.</h2>
         <br>
         <p class="coreCompetencies">Core competencies include: MongoDB, MySQL, Express, React, and Node. Check
           out
