--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,17 @@
   <!-- devicon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <!-- google fonts -->
+
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+
+
+
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- animate.css -->
@@ -204,7 +215,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 mb-4">
+      <div class="col-md-6">
         <div class="image">
           <img class="image__img" src="imgs/employee-tracker-shotsnapp.png" alt="employee tracker">
           <div class="image__overlay">
@@ -234,19 +245,19 @@
 
   <div class="container-fluid fluidFooter" style="text-align: center;">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col">
         <h5>Account Links</h5>
         <p><a href="https://github.com/rsg71" target="_blank">Github <i class="fab fa-github"></i></a></p>
         <p><a href="https://www.linkedin.com/in/robert-greenawalt/" target="_blank">LinkedIn <i
               class="fab fa-linkedin"></i></a></p>
       </div>
-      <div class="col-sm-4">
+      <div class="col">
         <h5>Site Navigation</h5>
         <p><a href="portfolio.html">Portfolio</a></p>
         <p><a href="resume.html">Resume</a></p>
         <p><a href="contact.html">Contact</a></p>
       </div>
-      <div class="col-sm-4">
+      <div class="col">
         <h5>Get in Touch</h5>
         <p><a href="mailto:robert.greenawalt29@gmail.com">
             robert.greenawalt29@gmail.com</a></p>
