include meta description tags on all pages to improve SEO

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  
+  <meta name="description" content="Robert Greenawalt is a full-stack developer from Philadelphia with experience using technologies like MongoDB, MySQL, Express, Node, React, and Javascript.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- bootstrap link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
