--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,27 @@
 
     gtag('config', 'G-XKDNDNR31F');
   </script>
+
+
+  <!-- hotjar -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+      h._hjSettings = { hjid: 2235962, hjsv: 6 };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script'); r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
 
-  <meta name="description" content="Robert Greenawalt is a full-stack developer from Philadelphia with experience using technologies like MongoDB, MySQL, Express, Node, React, and Javascript.">
-  
+  <meta name="description"
+    content="Robert Greenawalt is a full-stack developer from Philadelphia with experience using technologies like MongoDB, MySQL, Express, Node, React, and Javascript.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- bootstrap link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -83,7 +99,7 @@
 
 
 
-  
+
 
 
   <title>Contact | Robert Greenawalt</title>
