--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   </script>
 
 
-  <!-- hotjar -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-      h._hjSettings = { hjid: 2235962, hjsv: 6 };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script'); r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+ <!-- Hotjar Tracking Code for https://robertgreenawalt.com/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2235962,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
       a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-  </script>
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 
   <!-- Required meta tags -->
@@ -99,7 +99,7 @@
 
   <!-- End Nav bar ------------------------------------------------------->
 
-  <div class="container mx-auto">
+  <div class="container mx-auto myContainer">
     <br>
     <br>
     <div class="row animate__animated animate__fadeIn">
